--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AKIASJOXNKRXK5NKIUWT }}
-        aws-secret-access-key: ${{ secrets. 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}}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
