--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
       - master
 
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-south-1a                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: bus           # set this to your Amazon ECR repository name
   ECS_SERVICE: my_bus                 # set this to your Amazon ECS service name
   ECS_CLUSTER: bus_transport                 # set this to your Amazon ECS cluster name
