--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,10 +32,10 @@ on:
       - master
 
 env:
-  AWS_REGION: ap-south-1a                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: bus           # set this to your Amazon ECR repository name
-  ECS_SERVICE: my_bus                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: bus_transport                 # set this to your Amazon ECS cluster name
+  ECS_SERVICE: my-bus                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: bus-transport                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: bus_rout # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: bus_app           # set this to the name of the container in the
