--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,7 +69,7 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
-        # push it to ECR so that it can
+        # push it to ECR so that it can change
         # be deployed to ECS.
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
